--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/cards.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles/blog_cards.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles/blog_content.css'>
 </head>
 <body>
     <div class="container">
@@ -32,7 +34,7 @@
           <div class="content">
             <p class="white">Hello there,
             <br> my name is Jay</p>
-            <zero-md src="library/about_me.md"></zero-md>
+            <zero-md src="library/md/about_me.md"></zero-md>
           </div>
         </div>
 
@@ -101,6 +103,84 @@
             <div class="content">
               <p class="white">Blogs</p>
               <!-- <zero-md src="library/sample.md"></zero-md> -->
+              <div class="blog-slider">
+                <div class="blog-slider__wrp swiper-wrapper">
+                  <div class="blog-slider__item swiper-slide">
+                    <div class="blog-slider__img">
+                      
+                      <img src="images/qc.webp" alt="">
+                    </div>
+                    <div class="blog-slider__content">
+                      <span class="blog-slider__code">9 Sep 2022</span>
+                      <div class="blog-slider__title">Quantum Computing</div>
+                      <div class="blog-slider__text">Quantum computing is a type of computation whose operations can harness the phenomena of quantum mechanics, such as superposition, interference, and entanglement. Devices that perform quantum computations are known as quantum computers.</div>
+                      <span class="blog-slider__button read_more" id="qc" title="Quantum Computing">READ MORE</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <br>
+              <div class="blog-slider">
+                <div class="blog-slider__wrp swiper-wrapper">
+                  <div class="blog-slider__item swiper-slide">
+                    <div class="blog-slider__img">
+                      
+                      <img src="images/qc.webp" alt="">
+                    </div>
+                    <div class="blog-slider__content">
+                      <span class="blog-slider__code">9 Sep 2022</span>
+                      <div class="blog-slider__title">MuleSoft</div>
+                      <div class="blog-slider__text">MuleSoft is a type of computation whose operations can harness the phenomena of quantum mechanics, such as superposition, interference, and entanglement. Devices that perform quantum computations are known as quantum computers.</div>
+                      <span class="blog-slider__button read_more" id="ms" title="MuleSoft">READ MORE</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <section class="underlay hide"></section>
+              <section class="modal modal--blog hide" id="blog_sec">
+                <section class="modal__header">
+                  <article class="modal__header__title modal__header__title--blog">
+                    <h2 class="modal__header__title__text"></h2>
+                  </article>
+                  <article class="modal__controls">
+                    <article class="modal__header__button close_btn">
+                      <span class="modal__header__close">
+                        <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+                          <path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path>
+                        </svg>
+                      </span>
+                    </article>
+                  </article>
+                </section>
+                <section class="modal__content">
+                  <section class="modal__content__text">
+                    <zero-md src="library/md/blogs/qc.md"></zero-md>
+                  </section>
+                  <article class="modal__bloginfo">
+                    <section class="modal__bloginfo__image">
+                      <img src="/images/blog/seo.jpg" alt="">
+                    </section>
+                    <section class="modal__bloginfo__text">
+                      <section class="modal__bloginfo__tags">
+                        <h3>Web development</h3>
+                        <h3>writing</h3>
+                        <h3>Hove College</h3>
+                        <h3>SEO</h3>
+                        <h3>UX/UI</h3>
+                      </section>
+                      <h3>Description:</h3>
+                      <p>Text originally written for the Internet Marketing course I took at Hove College, updated in 2020.</p>
+                      <h3>Written by:</h3>
+                      <p>by Ninni Hagström</p>
+                      <h3>Source:</h3>
+                      <p>
+                        <a href="https://ads.google.com/home/" target="_blank">https://ads.google.com/home/</a>
+                      </p>
+                    </section>
+                  </article>
+                </section>
+              </section>
             </div>
         </div>
 
